--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "npm install && npm run build",
+    "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
